<?xml version="1.0"?>
<package>
  <name>ar_tools_msgs</name>
  <version>0.0.1</version>
  <description>Messages of ar_tools metapackage</description>
  <maintainer email="asantamaria@iri.upc.edu">Angel Santamaria-Navarro</maintainer>
  <author email="asantamaria@iri.upc.edu">Angel Santamaria-Navarro</author>
  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  
  <run_depend>geometry_msgs</run_depend>

  <export>
  </export>
</package>